Use a lazy approach to preventing the navbar from overflowing on mobile

--- a/WeddingWebsite/Components/Layout/MainLayout.razor.css
+++ b/WeddingWebsite/Components/Layout/MainLayout.razor.css
@@ -65,3 +65,9 @@
         right: 0.75rem;
         top: 0.5rem;
     }
+
+@media only screen and (max-width: 700px) {
+    .desktop-only {
+        display: none;
+    }
+}
